Added aimbot and other things

--- a/src/main/resources/forgehax_at.cfg
+++ b/src/main/resources/forgehax_at.cfg
@@ -9,6 +9,10 @@ public net.minecraft.network.play.server.SPacketExplosion field_149152_f        
 public net.minecraft.network.play.server.SPacketExplosion field_149153_g                    #motionY
 public net.minecraft.network.play.server.SPacketExplosion field_149159_h                    #motionZ
 
+public net.minecraft.network.play.client.CPacketPlayer field_149473_f                       #pitch
+public net.minecraft.network.play.client.CPacketPlayer field_149476_e                       #yaw
+public net.minecraft.network.play.client.CPacketPlayer field_149481_i                       #rotating
+
 public net.minecraft.network.play.server.SPacketEntityVelocity field_149415_b               #motionX
 public net.minecraft.network.play.server.SPacketEntityVelocity field_149416_c               #motionY
 public net.minecraft.network.play.server.SPacketEntityVelocity field_149414_d               #motionZ
