--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,11 @@ plugins {
 */
 version = "1.0"
 group= "com.matt.forgehax" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+archivesBaseName = "forgehax-1.10.2"
 
 minecraft {
     //version = "1.9.4-12.17.0.1968"
-    version = "1.10.2-12.18.0.2006-1.10.0"
+    version = "1.10.2-12.18.0.2010"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
