--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,7 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
+        maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
@@ -14,19 +11,17 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-/*
-// for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
-plugins {
-    id "net.minecraftforge.gradle.forge" version "2.0.2"
-}
-*/
-version = "1.0"
+version = "1.1"
 group= "com.matt.forgehax" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "forgehax-1.10.2"
+
+sourceCompatibility = targetCompatibility = "1.8"
+
+compileJava {
+    sourceCompatibility = targetCompatibility = "1.8"
+}
 
 minecraft {
-    //version = "1.9.4-12.17.0.1968"
-    version = "1.10.2-12.18.1.2073"
+    version = "1.11-13.19.0.2168"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -34,9 +29,11 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20160518"
+    mappings = "snapshot_20161111"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
+
+archivesBaseName = "forgehax-" + project.minecraft.version;
 
 dependencies {
     // you may put jars on which you depend on in ./libs
