--- a/src/main/resources/forgehax_at.cfg
+++ b/src/main/resources/forgehax_at.cfg
@@ -4,6 +4,7 @@ public net.minecraft.client.gui.GuiDisconnected field_146306_a                  
 
 public net.minecraft.client.renderer.ActiveRenderInfo field_178812_b                        #MODELVIEW
 public net.minecraft.client.renderer.ActiveRenderInfo field_178813_c                        #PROJECTION
+public net.minecraft.client.renderer.ActiveRenderInfo field_178811_e                        #position
 
 public net.minecraft.network.play.server.SPacketExplosion field_149152_f                    #motionX
 public net.minecraft.network.play.server.SPacketExplosion field_149153_g                    #motionY
