--- a/src/main/resources/forgehax_at.cfg
+++ b/src/main/resources/forgehax_at.cfg
@@ -23,6 +23,8 @@ public net.minecraft.network.play.client.CPacketPlayer field_149474_g           
 public net.minecraft.entity.player.EntityPlayer field_71083_bS                              #sleeping
 public net.minecraft.entity.player.EntityPlayer field_71076_b                               #sleepTimer
 
+public net.minecraft.client.entity.EntityPlayerSP field_110321_bQ                           #horseJumpPower
+
 public net.minecraft.client.Minecraft field_71429_W                                         #leftClickCounter
 public net.minecraft.client.Minecraft field_71467_ac                                        #rightClickDelayTimer
 
