Fix loading coreMods in a decompiled environment
When running in the IDE, manifest attributes need to be listed in
META-INF/MANIFEST.MF.

There is probably a way to do this automatically with gradle, but I am
not a gradle wizard. Maybe investigate the processResources task.

--- a/build.gradle
+++ b/build.gradle
@@ -61,9 +61,11 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'FMLCorePlugin': 'com.matt.forgehax.asm.ForgeHaxCoreMod',
+        attributes (
+                'FMLCorePlugin': 'com.matt.forgehax.asm.ForgeHaxCoreMod',
                 'FMLCorePluginContainsFMLMod': 'true',
                 'FMLAT': 'forgehax_at.cfg'
+        )
         /*
         attributes 'FMLCorePlugin': 'com.matt.forgehax.asm2.CoreMod',
                 'FMLCorePluginContainsFMLMod': 'true'*/
