Made some changes to build gradle so that it backs up old installs of ForgeHax

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
-// For those who want the bleeding edge
+import org.apache.tools.ant.filters.*
+
 buildscript {
     repositories {
         jcenter()
@@ -10,65 +11,32 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.2"
-group= "com.matt.forgehax" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = project.property('forgehax.version')
+group = 'com.matt.forgehax'
 
-sourceCompatibility = targetCompatibility = "1.8"
+sourceCompatibility = targetCompatibility = '1.8'
 
 compileJava {
-    sourceCompatibility = targetCompatibility = "1.8"
+    sourceCompatibility = targetCompatibility = '1.8'
 }
 
 minecraft {
     version = "1.11.2-13.20.0.2296"
     runDir = "run"
-    
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not allways work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
+
     mappings = "snapshot_20161220"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
-archivesBaseName = "forgehax-" + project.minecraft.version;
+archivesBaseName = "forgehax-" + project.minecraft.version
 
-dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-    compile files('libs/asmhelper-1.0.jar')
-    compile files('libs/journeymap-1.11.2-5.4.6.jar')
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-}
+dependencies {}
 
 jar {
     manifest {
         attributes (
                 'FMLCorePlugin': 'com.matt.forgehax.asm.ForgeHaxCoreMod',
-                'FMLCorePluginContainsFMLMod': 'true',
-                'FMLAT': 'forgehax_at.cfg'
+                'FMLCorePluginContainsFMLMod': 'true'
         )
-        /*
-        attributes 'FMLCorePlugin': 'com.matt.forgehax.asm2.CoreMod',
-                'FMLCorePluginContainsFMLMod': 'true'*/
     }
 }
 
@@ -90,6 +58,10 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+
+    filter ReplaceTokens, tokens: [
+            "forgehax.version": project.property("forgehax.version")
+    ]
 }
 
 task setGameDir() {
@@ -106,6 +78,32 @@ task setGameDir() {
 }
 
 task copyJar(type: Copy, dependsOn: [setGameDir]) {
+    def gameDirectory = "$gameDir/mods/" + minecraft.version
+
+    // find previous jar (if it exists)
+    def previousJars = fileTree(dir: gameDirectory).matching {
+        include archivesBaseName + '*'
+    }.files
+
+    // change file name
+    if(previousJars) {
+        // create .backups folder
+        def backupDir = gameDirectory + '/.backups/'
+        file(backupDir).mkdirs()
+
+        for(File previousJar : previousJars) {
+            def n = gameDirectory + '/.backups/' + previousJar.getName() + '.bk'
+            def f = file(n)
+            def i = 1
+            while(f.exists()) {
+                f = file(n + '_' + i)
+                i++
+            }
+            previousJar.renameTo(f)
+        }
+    }
+
+    // copy forgehax jar from libs to forge mod folder
     from jar
     into ("$gameDir/mods/" + minecraft.version)
 }
