Fixed missing dependency

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ minecraft {
 
 archivesBaseName = "forgehax-" + project.minecraft.version
 
-dependencies {}
+dependencies {
+    compile files('libs/journeymap-1.11.2-5.4.6.jar')
+}
 
 jar {
     manifest {
