--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ archivesBaseName = "forgehax-" + project.minecraft.version
 
 dependencies {
     compile files('libs/journeymap-1.11.2-5.4.6.jar')
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
 }
 
 jar {
