--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,6 @@
 forgehax.version=@forgehax.version@
+forgehax.mc.version=@forgehax.mc.version@
+forgehax.forge.version=@forgehax.forge.version@
+forgehax.mcp.version=@forgehax.mcp.version@
+forgehax.mcp.channel=@forgehax.mcp.channel@
+forgehax.mcp.mapping=@forgehax.mcp.mapping@
