--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 forgehax.version=2.0.0-beta
+forgehax.mc.version=1.11.2
+forgehax.forge.version=1.11.2-13.20.0.2296
+forgehax.mcp.version=1.11
+forgehax.mcp.channel=snapshot
+forgehax.mcp.mapping=20161220
