--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-forgehax.version=2.3.0-beta
+forgehax.version=2.4.0
 forgehax.mc.version=1.12.1
-forgehax.forge.version=1.12.1-14.22.0.2444
+forgehax.forge.version=1.12.1-14.22.0.2452
 forgehax.mcp.version=1.12
 forgehax.mcp.channel=snapshot
 forgehax.mcp.mapping=20170624
