added plugin support

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 ForgeHax.iml
+
 build/
 run/
 classes/
+
 .idea/
-.gradle/
-storage_test/
+
 libs/journeymap*
+
+.gradle/
 gradle/
 gradlew
 gradlew.bat
+
+settings.gradle
