fixed plugin/mod loader

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ task setGameDir() {
 }
 
 subprojects {
+    apply plugin: 'java'
     apply plugin: 'net.minecraftforge.gradle.forge'
 
     version rootProject.project.property('forgehax.version')
