--- a/build.gradle
+++ b/build.gradle
@@ -23,20 +23,22 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 sourceCompatibility = targetCompatibility = '1.8'
 
 group 'com.matt.forgehax'
-version rootProject.project.property('forgehax.version')
+version project.property('forgehax.version')
 
-archivesBaseName = "forgehax-" + rootProject.property('forgehax.mc.version')
+archivesBaseName = "forgehax-" + project.property('forgehax.mc.version')
 
 minecraft {
-    version = rootProject.project.property('forgehax.forge.version')
+    version = project.property('forgehax.forge.version')
     runDir = "run"
 
     // channel_mapping
-    mappings = rootProject.project.property('forgehax.mcp.channel') + '_' + rootProject.project.property('forgehax.mcp.mapping')
+    mappings = project.property('forgehax.mcp.channel') + '_' + project.property('forgehax.mcp.mapping')
 }
 
 dependencies {
     compile files("$rootDir/libs/journeymap-1.12-5.4.9.jar")
+
+    compile group: 'org.reflections', name: 'reflections', version: '0.9.10'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
@@ -71,13 +73,14 @@ processResources
         exclude 'mcmod.info'
     }
 
+    // TODO: Filter images out properly
     filter ReplaceTokens, tokens: [
-            "forgehax.version"      : rootProject.property("forgehax.version"),
-            "forgehax.mc.version"   : rootProject.property("forgehax.mc.version"),
-            "forgehax.forge.version": rootProject.property("forgehax.forge.version"),
-            "forgehax.mcp.version"  : rootProject.property("forgehax.mcp.version"),
-            "forgehax.mcp.channel"  : rootProject.property("forgehax.mcp.channel"),
-            "forgehax.mcp.mapping"  : rootProject.property("forgehax.mcp.mapping")
+            "forgehax.version"      : project.property("forgehax.version"),
+            "forgehax.mc.version"   : project.property("forgehax.mc.version"),
+            "forgehax.forge.version": project.property("forgehax.forge.version"),
+            "forgehax.mcp.version"  : project.property("forgehax.mcp.version"),
+            "forgehax.mcp.channel"  : project.property("forgehax.mcp.channel"),
+            "forgehax.mcp.mapping"  : project.property("forgehax.mcp.mapping")
     ]
 }
 
@@ -94,7 +97,7 @@ task setGameDir() {
     }
 }
 
-task copyJar(type: Copy, dependsOn: [rootProject.setGameDir]) {
+task copyJar(type: Copy, dependsOn: [setGameDir]) {
     def gameDirectory = "$gameDir/mods/" + minecraft.version
 
     // find previous jar (if it exists)
