--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ minecraft {
 
 dependencies {
     compile files("$rootDir/libs/journeymap-1.12-5.4.9.jar")
-    compile files("$rootDir/libs/Schematica-1.12-1.7.8.163-universal.jar")
+    //compile files("$rootDir/libs/Schematica-1.12-1.7.8.163-universal.jar")
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
