--- a/src/main/resources/asmlib.forgehax.config.json
+++ b/src/main/resources/asmlib.forgehax.config.json
@@ -2,6 +2,7 @@
   "name": "Forgehax-asmlib",
   "required": true,
   "priority": 1000,
+  "mappings": "asmlib.forgehax.mappings.json",
 
   "transformers": {
     "com.matt.forgehax.asm.asmlib.patches": [
