use custom init hook

--- a/src/main/resources/asmlib.forgehax.config.json
+++ b/src/main/resources/asmlib.forgehax.config.json
@@ -6,6 +6,7 @@
 
   "transformers": {
     "com.matt.forgehax.asm.asmlib.patches": [
+      "MinecraftPatch",
       "BlockPatch",
       "BoatPatch",
       "BufferBuilderPatch",
