--- a/src/main/resources/asmlib.forgehax.config.json
+++ b/src/main/resources/asmlib.forgehax.config.json
@@ -26,7 +26,8 @@
       "VisGraphPatch",
       "WorldPatch",
       "WorldClientPatch",
-      "GuiScreenPatch"
+      "GuiScreenPatch",
+      "Forge_GuiUtilsPatch"
     ]
   }
 }
