--- a/src/main/resources/asmlib.forgehax.config.json
+++ b/src/main/resources/asmlib.forgehax.config.json
@@ -27,7 +27,13 @@
       "WorldPatch",
       "WorldClientPatch",
       "GuiScreenPatch",
-      "Forge_GuiUtilsPatch"
+      "Forge_GuiUtilsPatch",
+      "RenderPlayerPatch",
+      "ForgeHooksClientPatch",
+      "EntityLivingBasePatch",
+      "ItemRendererPatch",
+      "GuiIngamePatch",
+      "GuiIngameForgePatch"
     ]
   }
 }
