replace more events and start removing all references to minecraftforge

--- a/src/main/resources/asmlib.forgehax.config.json
+++ b/src/main/resources/asmlib.forgehax.config.json
@@ -33,7 +33,8 @@
       "EntityLivingBasePatch",
       "ItemRendererPatch",
       "GuiIngamePatch",
-      "GuiIngameForgePatch"
+      "GuiIngameForgePatch",
+      "RenderLivingBasePatch"
     ]
   }
 }
