more vanilla compatibility

--- a/src/main/resources/asmlib.forgehax.config.json
+++ b/src/main/resources/asmlib.forgehax.config.json
@@ -34,7 +34,8 @@
       "ItemRendererPatch",
       "GuiIngamePatch",
       "GuiIngameForgePatch",
-      "RenderLivingBasePatch"
+      "RenderLivingBasePatch",
+      "NetHandlerPlayClientPatch"
     ]
   }
 }
