--- a/src/main/resources/asmlib.forgehax.config.json
+++ b/src/main/resources/asmlib.forgehax.config.json
@@ -3,7 +3,6 @@
   "required": true,
   "priority": 1000,
   "mappings": "asmlib.forgehax.mappings.json",
-
   "transformers": {
     "com.matt.forgehax.asm.asmlib.patches": [
       "MinecraftPatch",
@@ -27,13 +26,13 @@
       "WorldPatch",
       "WorldClientPatch",
       "GuiScreenPatch",
-
+      "Forge_GuiUtilsPatch",
       "RenderPlayerPatch",
-
-
+      "ForgeHooksClientPatch",
+      "EntityLivingBasePatch",
       "ItemRendererPatch",
       "GuiIngamePatch",
-
+      "GuiIngameForgePatch",
       "RenderLivingBasePatch",
       "NetHandlerPlayClientPatch"
     ]
